# fsext-mcp-server-python

./: .gitignore  LICENSE  NOTICE  README.md  README_zh.md  THIRD_PARTY_LICENSES  pyproject.toml
src/fsext/: _instance.py  path_restrict.py  response_helper.py  server.py  tool_error.py
src/fsext/tool/: charset.py  fs_base.py  fs_dir.py  fs_img.py  fs_read_write.py  fs_search_replace.py
src/fsext/util/: __init__.py  check_utils.py  dir.py  dir_service.py  file.py  file_read.py  file_read_service.py  file_replace.py  file_replace_service.py  file_search.py  file_search_service.py  file_service.py  file_write.py  file_write_service.py  image.py  image_service.py  ocr.py  ocr_service.py
tests/: __init__.py  run.txt  test_util.py
