# SPDX-FileCopyrightText: 2026 https://github.com/kurtzhi/fsext-mcp-server-python
# SPDX-License-Identifier: Apache-2.0

# Copyright 2026 https://github.com/kurtzhi/fsext-mcp-server-python
#
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsext-mcp-server"
version = "0.1.0"
authors = [
    { name="Kurt Zhi", email="constantine.johns@gmail.com" },
]
description = "Extended filesystem MCP toolkit with file I/O, directory operations, image processing and OCR. Supports stdio, SSE and streamable-http transports."
requires-python = ">=3.10.0,<3.15"
dependencies = [
    "fastmcp>=2.5.1,<=3.4.2",
    "chardet>=5.2.0,<=7.4.3",
    "Pillow>=10.0.1,<=12.2.0",
    "python-magic>=0.4.21,<=0.4.27",
    "pytesseract>=0.3.8,<=0.3.13",
    "pydantic>=2.7.2,<=2.13.4"
]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "NOTICE",
    "THIRD_PARTY_LICENSES"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio"
]

[project.urls]
Homepage = "https://github.com/kurtzhi/fsext-mcp-server-python"
Issues = "https://github.com/kurtzhi/fsext-mcp-server-python/issues"
repository = "https://github.com/kurtzhi/fsext-mcp-server-python"

[project.scripts]
fsext-mcp-server = "fsext.server:main"
fsext-mcp = "fsext.server:main"
fsext = "fsext.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exclude = ["tests*", "*/tests/*"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true




